--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,10 @@
 
     <!-- This information will be displayed in ModTheSpire, the modded launcher. -->
     <name>Juxverse</name>
-    <version>0.0.0</version>
+    <version>1.0.1</version>
     <!-- Avoid using \ in this description, as they can cause the description to fail to load. -->
     <!-- If you really want to use them, you'll need to "escape" them by putting another one in front, like \\ -->
-    <description>This is a mod featuring items, people, and spells from our Juxverse setting.</description>
+    <description>This is a mod featuring items, people, and spells from our Juxverse setting. Contains Starseeker.</description>
 
     <!--You shouldn't need to change anything below this point, but feel free to look at it.-->
     <!--You'll get a warning regarding these when you package your mod, but don't worry, it's just set up like this for convenience.-->
